boot+dubbo+zookeeper配置中心

--- a/boot-parent/pom.xml
+++ b/boot-parent/pom.xml
@@ -16,6 +16,7 @@
 		<module>boot-service</module>
 		<module>boot-web</module>
 		<module>boot-consumer</module>
+		<module>boot-configcenter</module>
 	</modules>
 	
 	
