--- a/boot-parent/pom.xml
+++ b/boot-parent/pom.xml
@@ -34,6 +34,14 @@
 				<artifactId>dubbo-spring-boot-starter</artifactId>
 				<version>1.0.0</version>
 			</dependency>
+			 <!-- <dependency>
+	            <groupId>org.springframework.cloud</groupId>
+	            <artifactId>spring-cloud-starter-config</artifactId>
+        	</dependency>
+        	<dependency>
+	            <groupId>org.springframework.boot</groupId>
+	            <artifactId>spring-boot-starter-actuator</artifactId>
+        	</dependency> -->
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
@@ -59,6 +67,13 @@
 	            <artifactId>zkclient</artifactId>
 	            <version>0.1</version>
 			</dependency>
+			<!-- <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Dalston.SR1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency> -->
     	</dependencies>
     </dependencyManagement>
 </project>
