--- a/boot-parent/.project
+++ b/boot-parent/.project
@@ -5,13 +5,13 @@
 	<projects>
 	</projects>
 	<buildSpec>
-		<buildCommand>
-			<name>org.eclipse.m2e.core.maven2Builder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
+		 <buildCommand>
+         <name>org.eclipse.wst.jsdt.core.javascriptValidator</name>
+         <arguments>
+         </arguments>
+		<ildCommand>
 	</buildSpec>
 	<natures>
-		<nature>org.eclipse.m2e.core.maven2Nature</nature>
+		<nature>org.eclipse.wst.jsdt.core.jsNature</nature> 
 	</natures>
 </projectDescription>
