--- a/boot-parent/pom.xml
+++ b/boot-parent/pom.xml
@@ -23,57 +23,42 @@
 	 <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.4.2.RELEASE</version>
+        <version>1.4.5.RELEASE</version>
         <relativePath />
     </parent>
     
-    <dependencyManagement>
-    	<dependencies>
-    		<dependency>
-				<groupId>com.alibaba.spring.boot</groupId>
-				<artifactId>dubbo-spring-boot-starter</artifactId>
-				<version>1.0.0</version>
-			</dependency>
-			 <!-- <dependency>
-	            <groupId>org.springframework.cloud</groupId>
-	            <artifactId>spring-cloud-starter-config</artifactId>
-        	</dependency>
-        	<dependency>
-	            <groupId>org.springframework.boot</groupId>
-	            <artifactId>spring-boot-starter-actuator</artifactId>
-        	</dependency> -->
-			<dependency>
-				<groupId>org.apache.httpcomponents</groupId>
-				<artifactId>httpclient</artifactId>
-				<version>4.3.5</version>
-			</dependency>
-			<dependency>
-	            <groupId>org.apache.zookeeper</groupId>
-	            <artifactId>zookeeper</artifactId>
-	            <version>3.4.6</version>
-	            <exclusions>
-	                <exclusion>
-	                    <groupId>org.slf4j</groupId>
-	                    <artifactId>slf4j-log4j12</artifactId>
-	                </exclusion>
-	                <exclusion>
-	                    <groupId>log4j</groupId>
-	                    <artifactId>log4j</artifactId>
-	                </exclusion>
-	            </exclusions>
+    <properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.7</java.version>
+	</properties>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-			<dependency>
-				 <groupId>com.github.sgroschupf</groupId>
-	            <artifactId>zkclient</artifactId>
-	            <version>0.1</version>
-			</dependency>
-			<!-- <dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
+        <!--监控+refresh配置-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+    </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>Dalston.SR1</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency> -->
-    	</dependencies>
+            </dependency>
+        </dependencies>
     </dependencyManagement>
 </project>
