--- a/boot-parent/.project
+++ b/boot-parent/.project
@@ -5,13 +5,13 @@
 	<projects>
 	</projects>
 	<buildSpec>
-		 <buildCommand>
-         <name>org.eclipse.wst.jsdt.core.javascriptValidator</name>
-         <arguments>
-         </arguments>
-		<ildCommand>
+		<buildCommand>
+			<name>org.eclipse.m2e.core.maven2Builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>org.eclipse.wst.jsdt.core.jsNature</nature> 
+		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 	</natures>
 </projectDescription>
