--- a/boot-parent/pom.xml
+++ b/boot-parent/pom.xml
@@ -42,12 +42,15 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
-
         <!--监控+refresh配置-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <dependency>
+	        <groupId>org.springframework.cloud</groupId>
+	        <artifactId>spring-cloud-context</artifactId>
+	    </dependency>
     </dependencies>
 
     <dependencyManagement>
