--- a/boot-parent/boot-web/src/main/resources/application.properties
+++ b/boot-parent/boot-web/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#Sat Apr 20 23:50:36 CST 2019
+#Sun Apr 14 02:20:15 CST 2019
 spring.http.multipart.maxFileSize=100Mb
 spring.datasource.connectionProperties=druid.stat.mergeSql\=true;druid.stat.slowSqlMillis\=500
 spring.datasource.validationQuery=SELECT 'x'
@@ -11,7 +11,7 @@ spring.datasource.initialSize=3
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.maxActive=20
 spring.dubbo.protocol=dubbo
-spring.datasource.one.url=jdbc\:postgresql\://47.92.107.201\:5432/pre_operation
+spring.datasource.one.url=jdbc\:postgresql\://47.92.81.255\:5432/operation
 spring.datasource.testWhileIdle=true
 spring.datasource.timeBetweenEvictionRunsMillis=60000
 spring.datasource.one.password=junbao@123
