--- a/boot-parent/pom.xml
+++ b/boot-parent/pom.xml
@@ -51,6 +51,11 @@
 	        <groupId>org.springframework.cloud</groupId>
 	        <artifactId>spring-cloud-context</artifactId>
 	    </dependency>
+	   	<dependency>
+	   		<groupId>com.rabbitmq</groupId>
+	   		<artifactId>amqp-client</artifactId>
+	   		<version>4.0.2</version>
+	   	</dependency>
     </dependencies>
 
     <dependencyManagement>
