--- a/boot-parent/boot-web/src/main/resources/application.properties
+++ b/boot-parent/boot-web/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Sun Apr 14 02:20:15 CST 2019
 spring.http.multipart.maxFileSize=100Mb
-spring.datasource.connectionProperties=druid.stat.mergeSql\=true;druid.stat.slowSqlMillis\=500
+spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
 spring.datasource.validationQuery=SELECT 'x'
-spring.dubbo.registry=zookeeper\://127.0.0.1\:2181
+spring.dubbo.registry=zookeeper://127.0.0.1:2181
 spring.datasource.testOnBorrow=true
 spring.datasource.filters=stat,wall,log4j
 spring.datasource.removeAbandoned=true
@@ -11,7 +11,7 @@ spring.datasource.initialSize=3
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.maxActive=2
 spring.dubbo.protocol=dubbo
-spring.datasource.one.url=jdbc\:postgresql\://47.92.81.255\:5432/operation
+spring.datasource.one.url=jdbc:postgresql://47.92.81.255:5432/operation
 spring.datasource.testWhileIdle=true
 spring.datasource.timeBetweenEvictionRunsMillis=60000
 spring.datasource.one.password=junbao@123
